codepkg/objects/Size_Chart__c.object
<CustomObject>
    <fields>
        <fullName>EngSize1__c</fullName>
        <label>EngSize1</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EngSize2__c</fullName>
        <label>EngSize2</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EngSize3__c</fullName>
        <label>EngSize3</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Size Charts</relationshipLabel>
        <relationshipName>Size_Charts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Retailer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Retailer</label>
        <referenceTo>Retailer_Code__c</referenceTo>
        <relationshipLabel>Size Charts</relationshipLabel>
        <relationshipName>Size_Charts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Size1__c</fullName>
        <label>Size1</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Size1a__c</fullName>
        <label>Size1a</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Size1c__c</fullName>
        <label>Size1c</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Size1d__c</fullName>
        <label>Size1d</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Size1e__c</fullName>
        <label>Size1e</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Size2__c</fullName>
        <label>Size2</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Size2a__c</fullName>
        <label>Size2a</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Size2c__c</fullName>
        <label>Size2c</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Size2d__c</fullName>
        <label>Size2d</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Size2e__c</fullName>
        <label>Size2e</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Size3__c</fullName>
        <label>Size3</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Size3a__c</fullName>
        <label>Size3a</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Size3c__c</fullName>
        <label>Size3c</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Size3d__c</fullName>
        <label>Size3d</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Size3e__c</fullName>
        <label>Size3e</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>size1b__c</fullName>
        <label>size1b</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>size2b__c</fullName>
        <label>size2b</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>size3b__c</fullName>
        <label>size3b</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <label>Size Chart</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Retailer__c</columns>
        <columns>Product__c</columns>
        <columns>Size__c</columns>
        <columns>Size1__c</columns>
        <columns>Size2__c</columns>
        <columns>Size3__c</columns>
        <columns>Size4__c</columns>
        <columns>Size5__c</columns>
        <columns>Size6__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Search</fullName>
        <columns>NAME</columns>
        <columns>Retailer__c</columns>
        <columns>Product__c</columns>
        <columns>Size__c</columns>
        <columns>Size1__c</columns>
        <columns>Size2__c</columns>
        <columns>Size3__c</columns>
        <columns>Size4__c</columns>
        <columns>Size5__c</columns>
        <columns>Size6__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Retailer__c</field>
            <operation>contains</operation>
            <value>DEMO</value>
        </filters>
        <filters>
            <field>Product__c</field>
            <operation>contains</operation>
            <value>DM-CARE</value>
        </filters>
        <label>_Search</label>
        <sharedTo>
            <role>Administrator_Role</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Size Chart Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Size Charts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>